# yahoo-finance

./: LICENSE  README.md  pyproject.toml
app/: scraping_bs.py
