[tool.poetry]
name = "yahoo-finance"
version = "0.1.0"
description = ""
authors = ["cristopher <smp.cristopher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
selenium = "^4.23.1"
openpyxl = "^3.1.5"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
